--- a/report/report.tex
+++ b/report/report.tex
@@ -45,47 +45,51 @@
 
 \section*{Generative artificial intelligence technology statement}
 
-I used Anthropic's Claude to write a LaTeX template based on the project report template, but all C/C++ code logic and implementation are my own.
+I, D.A.S.R. Coret, used Anthropic's Claude to write a LaTeX template based on the project report template, but all C/C++ code logic and implementation are my own.
 
 \newpage
 
 \section{Overview}
-In this project a castle defender has to be developed.
-A castle defender game is a game where the user has to defend a castle from enemies.
+In this project a castle defender game had to be developed.
+In such a game the user has to defend a castle from enemies approaching said castle.
 The user has the ability to place towers which will shoot and eliminate enemies.
 The game will end if the castle has ran out of health or all enemy waves have been spawned and cleared.
 
 Most requirements that have been set out in the project description have been fullfiled.
 Code quality is far from optimal.
-Initially the code was developed as a multi agent system engine, yet the requirements mention turn based movements, instead of distributed movements.
+Initially the code was developed as a multi agent system engine, yet the requirements mention turn based movements, instead of distributed movements, this is a result of me beginning to code before fully reading the project assignment; which did teach me a valuable lession.
+There is no clear seperation of functionality, as many layers of the program had to interact with the grid, this continues to be an area of improvement. of my code style.
 
 A simple, yet effective artificial intelligence was implemented.
-The artificial intelligence draws from a probability distribution containing all legal moves, which is a transformed vector containing real valued numbers.
-After an enemy dies, the artificial intelligence updates the vector such that it will avoid the column where it was killed by a tower.
+The artificial intelligence learns by updating a probability distribution containing all legal moves, based on the deletion of enemies; recall how both enemies who got eliminated by a tower and enemies that have reached the castle have to be deleted.
 
-Difficulties were found when an agent has to interact with another agent.
-Since the agent is an element of the grid, and not the other way around, there was no trivial way for agents to interact.
+Difficulties were found when a grid object has to interact with another grid object.
+Since the grid object is an element of the grid, and not the other way around, there was no trivial way for grid objects to interact.
 This problem was solved by creating a simple "move" structure, which contains all information such that the game and grid can execute the move.
 Another problem came in the form of recursive header calls.
 This problem was solved by generalising classes using templates.
 
-I worked on this project frequently, without clear schedule; just letting ADHD do its thing.
+I worked on this project frequently, without clear schedule.
 
 \section{Tasks and objectives}
-The grid was implemented using a template that can hold any datatype.
-A grid object was made, which has virtual methods, that can be used as a superclass for all object which are placed on the grid.
+The grid was implemented using a template, such that it can hold any object.
+Pointers to the template object were stored, since the movement of pointers is faster than whole objects, and more pointers to the same object were needed.
+A grid object was made, which has virtual methods, that can be used as a superclass for all objects which are placed on the grid.
 The tower, enemy, and castle inherit from the grid object.
 By initialising the grid using the grid object datatype, runtime polymorphism can be used, such that all objects derived from the grid object can be placed on the grid.
+Virtual methods were overriden to give grid objects unique behaviour.
 The grid objects will select a move or action, which the game object executes (e.g., killing an enemy or moving forward).
 A structure was implented for simpler interaction between parts of the program.
 An owner class was created as a baseclass for both the AI and player.
-The owner has access to all grid objects owned by that owner.
+The owner has access to all grid objects owned by that owner, resulting in multiple pointers directed to the same grid objects, in the grid and in the owner's grid objects (referred to as agents in code).
+Manual memory was allocated during the placement of objects, while it was deallocated either by the removal of an object or by the grid deconstructor.
 
 \subsection{Battlefield}
-The battlefield is realised by a vector from the standard library, using row-major indexing, of length $row * cols$ where the elements may point to a grid object in memory.
+The battlefield was realised by a vector from the standard library, using row-major indexing, of length $row * cols$ where the elements may point to a grid object in memory.
 Row-major indexing allows for the elements to be stored in a continuous fashion, which is more cache friendly (probably not noticable at this scale).
-The use of templates was necessary for modularity and recusive header calls (more on this in the challenges section).
-The vector stores memory adresses of the elements on the grid, where is stores a nullptr iff the position is vacant.
+The use of templates was necessary for modularity and fixing recusive header calls error (more on this in the challenges section).
+The vector stores pointers of the elements on the grid, where is stores a nullptr iff the position is vacant.
+Each position in the vector corrosponds with a patch.
 
 The grid updates via the game header, more in this in the game section.
 
@@ -106,55 +110,75 @@ class Grid {
     }
 \end{lstlisting}
 
-
-
 \subsection{Grid object}
 A grid object was used as a base class for other objects.
 Runtime polymorphism is used such that the object's methods being held by both the grid and owner can be overriden for specific behaviour.
-
-
-\subsubsection{Tower and castle}
-Towers scan the grid using a nested for loop.
-Towers have access to the grid, via a pointer.
-If an enemy is detected, the move structure get updated.
-The tower only gets to shoot once, since, while the
-
-\subsubsection{Enemy}
-Enemies only have the ability to move forward, or diagonal in some instances.
-Enemy spawning is more complex, and involves updating values based on deaths.
-
-Enemies can only move forward to the castle row.
-The enemy will only move forward if the spot is vacant, if the spot is occupied it will try to move diagonally, in either forward direction.
-If all legal directions are occupied, the enemy will be removed from the board.
-Some enemy types have a speed bigger than one, as such they will not check the spot(s) immediatly in front of them.
-These enemies can be considered arial units, making it a feature, not a bug.
+The grid object receives a pointer to the grid, such that it can make observations on the grid (e.g., if object is on specific patch).
 
 \subsection{Movement and other actions}
+Movement is delegated by the move structure, this serves as a middle layer between the grid objects and the game/grid.
+The grid object has a 'return\_move()' method, that changes a move structure to the preferred move by the grid object.
+
+See below for an example, see full code for full implementation.
+
+\begin{lstlisting}
+struct Move {
+    int row;
+    int col;
+    int row_new;
+    int col_new;
+
+    bool remove_obj = false;
+    bool movement_bool = false;
+    bool shoot_bool = false;
+    bool reached_castle = false;
+};
+\end{lstlisting}
+
+\subsubsection{Tower and castle}
+Towers detect and attack enemies by iterating through all patches of the grid that might be in range:
+Suppose a tower with range r.
+This tower will start at (min(0, x-r), min(0, y-r) and end at (max(cols-1, x+r), max(cols-1, y+r)).
+The euclidean distance for all patches get calculated to verify if the patch is truly in range.
+
+The move structure gets updated if the tower spots an enemy, the new row is considered the patch to target.
+
+
+\subsubsection{Enemy}
+Enemies only have the ability to move forward, or diagonal when forward path is obstructed.
+Enemy spawning is more complex and is discussed in \ref{sec:ai}.
+
+Enemies can only move forward to the castle row.
+The enemy will only move forward if the spot is vacant, if the spot is occupied it will try to move diagonally, in either forward direction \footnote{In theory the code could be adapted such that the enemy could draw for the probability distribution, but in reality these enemies rarely survive a collision with a tower}.
+If all legal directions are occupied, the enemy will be removed from the board.
+Some enemy types have a speed bigger than one, as such they will not check the spot(s) immediately in front of them.
+These enemies can be considered arial units, making it a feature, not a bug.
+
+
 
 \subsection{Owner}
 The owner object is the base class for both the player and artificial intelligence.
 The owner has a vector containing pointers to grid objects.
 Additional information, such as the dimensions of the grid.
 
-It should be noted that both the grid and an owner point to the same object.
-More on this in challenges.
+It should be noted that both the grid and an owner (player or ai) point to the same object.
 
 \subsubsection{Player}
 The player adds a upgrade tower method.
 
-\subsubsection{Artificial intelligence}
+\subsubsection{Artificial intelligence} \label{sec:ai}
 
 \paragraph{Placing}
 The artificial intelligence spawns enemies by drawing from a probability distribution.
-Everytime a enemy gets spawned, the artificial intelligence transforms the vector containing logits into a probability distribution (see equation \ref{eq:transformation}).
-These logit get initialised to 1, such that one starts with a uniform probability distribution.
+Every time an enemy gets spawned, the artificial intelligence transforms the vector containing logits into a probability distribution (see equation \ref{eq:transformation}).
+These logits get initialised to 1, such that one starts with a uniform probability distribution.
 
 \begin{equation} \label{eq:transformation}
 T: \mathbf{x_t} \mapsto \mathbf{p}
 \end{equation}
 
 Every element corresponds to a unique column, where $x_{i}$ refers to the i-th column.
-To transform the logit vector to a probability vector, an elementwise softmax is applied (see equation \ref{eq:to_pdf}.
+To transform the logit vector to a probability vector, an element-wise softmax is applied (see equation \ref{eq:to_pdf}.
 
 \begin{equation} \label{eq:to_pdf}
 p_i = \dfrac{e^{x_{i, t}}}{\sum_{x \in \mathcal{X}}^{N} e^{x_j, t}}
@@ -169,7 +193,7 @@ Exponentiating each element, thus, results in positive values.
 The logit vector gets updated using a formula that prioritises learning close to the location of death (see equation \ref{eq:update_logit}.
 The formula set out to do the following:
 decrease the value when an enemy dies because of enemy fire,
-increase the value when an eemy dies because it has reached the castle,
+increase the value when an enemy dies because it has reached the castle,
 and update the value of neighbouring columns in a similar, yet scaled fashion.
 
 
@@ -182,11 +206,11 @@ $D$ is the boolean value if the enemy has died because of enemy fire,
 $i$ is the index of the column which is being updated,
 $c_{d}$ is the index of the column where the enemy has died,
 \alpha is the learning rate,
-and $x_{i}$ is the logit value corrosponding to column i.
+and $x_{i}$ is the logit value corresponding to column i.
 
 Above the division it $R - D$, returns $-1$ when an enemy was killed by a tower; and return $1$ when it has reached the castle.
 Resulting in
-The top part of the fraction will make it such that it substract when being killed, and adding when reaching the castle.
+The top part of the fraction will make it such that it subtract when being killed, and adding when reaching the castle.
 
 
 \subsection{Scoring and endgame}
@@ -209,17 +233,34 @@ If the health attribute of the info structure is smaller or equal to zero, game 
 Additionally, in the next wave method game over  gets set to true, if the current wave is bigger than the amount waves.
 When game over is true, a while loop breaks, ending the game.
 
-\subsection{Enemy behaviour}
-
 \section{Game}
 The game header functions as an executive system, looping through all grid object being owned by an owner.
+The game object has a tick method, that iterates through all object owned by an owner.
+The tick method initialises a move structure, passes this to the grid\_object.return\_move(), and executes this adjusted move.
+The execute move method is given below.
+
+\begin{lstlisting}
+void execute_move(Move& move, Owner<GO>* owner) {
+    if (move.remove_obj) {
+        GO* ptr = grid(move.row, move.col);
+        grid.delete_object(move.row, move.col);
+        owner->update_death(move);
+        owner->operator()(move.index_owner) = nullptr;
+        delete ptr;
+    } else if (move.movement_bool) {
+        move.moved_bool = grid.move_object(move);
+    } else if (move.shoot_bool) {
+        grid(move.row_new, move.col_new)->take_dmg(grid(move.row, move.col)->get_power());
+    }
+}
+\end{lstlisting}
 
 
-\section{Challenges}
-Multiple challanges were found and solved. Details are discussed below.
+\section{Challenges} \label{sec:challenges}
+Multiple challenges were found and solved. Details are discussed below.
 \begin{enumerate*}[label=\arabic*.]
     \item Recursive header calls were solved using templates;
-    \item Interaction problem between agents was solved by introducing a \textit{move} structure;
+    \item Interaction problem between grid objects was solved by introducing a \textit{move} structure;
     \item Pointers and manual memory
 \end{enumerate*}
 
@@ -227,18 +268,20 @@ Multiple challanges were found and solved. Details are discussed below.
 Recursive header calls were solved by using templates.
 Earlier versions of the project required all headers to include all headers
 (i.e., the grid had to include the grid object, and vice versa).
-This was initially solved by having subclasses in seperate header files, but this made the program harder to comprehend.
+This was initially solved by having subclasses in separate header files, but this made the program harder to comprehend.
 To generalise the code, instead of having to rely on the grid object header, templates were used.
 Which also made much of the code reusable for other objects.
 
 \subsection{Partially solved}
-Interaction problem between age
+Interaction problem between grid objects and their objects (enemy, tower, etc) was solved by implementing a \textit{move} structure.
+In earlier versions of the program, the grid objects had no way to access the grid, to access other grid objects, to shoot or check if spot is empty.
+By implementing the \textit{move} structure as a middle layer, this interaction problem was solved.
 
 \section{Discussion and future work}
-The AI having a different learning rate for each difficult is a interesting concept in my opinion.
+The AI having a different learning rate for each difficulty is a interesting concept in my opinion.
 Ideally equation \ref{eq:update_logit} would update the probability distribution, but I did not know how.
 As far as I am aware, most difficulty adjustments change the available resources of the AI.
-While this is an interesting concept, static tower placement limit how intersting this AI really is.
+While this is an interesting concept, static tower placement limit how interesting this AI really is.
 To further improve the learning of the AI, one will have to make the possibility to remove or move towers.
 Furthermore, the AI is limited in unlearning things.
 
@@ -247,7 +290,7 @@ On one hand, this makes sure the enemy which is latest in the grid (closer to th
 On the other hand, the is computationally inefficient since it does not return after a move was found.
 Additionally, this is not a intelligent decision maker by any means.
 Stronger enemies (those with a higher speed, in this case), do not get prioritised.
-Future work should focus on making the towers intelligent agents.
+Future work should focus on making the towers intelligent grid objects.
 
 
 \end{document}
